# MetaRepICL

./: .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  AGENTS.md  Dockerfile  LICENSE  Makefile  PROJECT_PLAN.md  README.md  REPRODUCIBILITY.md  REVIEW_ISSUES.md  index.html  mkdocs.yml  output_manifest.json  prop.md  pyproject.toml  requirements-lock.txt  requirements.txt  test_hydra.py
.cognition/: config.local.json
anonymity_checklist/: index.html
compute_budgets/: index.html
configs/: config.yaml  route_a.yaml
data/: 20news_binary.csv  ag_news_train.csv  sentiment.csv  stsb_sample.csv  trec_train.csv
demo/: index.html
docs/: anonymity_checklist.md  compute_budgets.md  demo.md  index.md  lat_to_cg_proof.md  masking.md  mechanistic_report.md  reproducibility.md  route_a_theorem.md  route_b_bound.md  status.md
experiments/: algorithm_id.py  arch_robustness.py  compare_ridge_transformer.py  discrimination_sweep.py  generate_manifest.py  index.html  lat_cg_demo.py  metric_robustness.py  multi_seed.py  precond.py  probe_sanity.py  real_data_eval.py  real_data_sweep.py  real_data_transformer.py  results_real_data.md  results_transformer_real.md  route_a_end2end.py  route_a_minimal.py  route_b_approx.py  run_eval.py  silent_failure.py  train_and_probe.py  train_mixed_kappa.py  verify_data_baselines.py  width_rank.py
lat_to_cg_proof/: index.html
masking/: index.html
paper/: workshop_paper.md
reproducibility/: index.html
route_a_theorem/: index.html
route_b_bound/: index.html
scripts/: README.md  __init__.py  check_anonymity.py  check_seed.py  (+10 more)
(+89 files in other folders)
